--- a/Assets/Scripts/Game.asmdef
+++ b/Assets/Scripts/Game.asmdef
@@ -1,3 +1,15 @@
 {
-	"name": "Game"
+	"name": "Game",
+	"references": [
+		"Unity.TextMeshPro"
+	],
+	"includePlatforms": [],
+	"excludePlatforms": [],
+	"allowUnsafeCode": false,
+	"overrideReferences": false,
+	"precompiledReferences": [],
+	"autoReferenced": true,
+	"defineConstraints": [],
+	"versionDefines": [],
+	"noEngineReferences": false
 }
